--- a/hw-4/mthe-474-hw-4-q-4.tex
+++ b/hw-4/mthe-474-hw-4-q-4.tex
@@ -28,7 +28,7 @@
       \part{}
       \begin{solution}
         \begin{claim}
-          42.
+          True (DPI)
         \end{claim}
         \begin{proof}
           42.
@@ -38,7 +38,7 @@
       \part{}
       \begin{solution}
         \begin{claim}
-          42.
+          True (example)
         \end{claim}
         \begin{proof}
           42.
@@ -48,7 +48,7 @@
       \part{}
       \begin{solution}
         \begin{claim}
-          42.
+          False (do the example)
         \end{claim}
         \begin{proof}
           42.
